<resources>
    <string name="app_name">HandgesterRecognition</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">HandGestureRegcognitionApplication</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_parameter">Parameters Setting</string>
    <string name="menu_capture">Capture Image</string>
    <string name="menu_predict">Predict Image Class</string>

    <string name="home_second">Home Second</string>

    <string name="RPSG">Rock - Paper - Scissors - Game</string>
    <string name="Play">play!</string>

    <string name="chooser_title">open with</string>

    //compare page
    <string name="compareTitle">Compare image</string>
    <string name="s1">Selecting Type of Extracted Features</string>
    <string name="Select_feature">SELECT FEATURES</string>
    <string name="s2">Setting Parameters for feature Extraction</string>
    <string name="Parameters_setting">PARAMETERS SETTING</string>
    <string name="s3">Setting Parameters for Image Preprocessing Process</string>
    <string name="Preprocessing_setting">PREPROCESSING SETTING</string>
    <string name="s4">Setting Parameters for Image Classifier</string>
    <string name="Classcifier_parameter">CLASSCIFIER PARAMETER SETTING</string>

    //Predict Image Class
    <string name="Summary_information"><b>Predict image class information</b></string>
    <string name="Selection_feature"><u>Pre-Processing result :</u></string>
    <string name="SF_ans">display a pre-processing input image(from the selected picture)</string>
    <string name="Parameters_setting_PreImg_FD"><u>Feature Extraction result :</u></string>
    <string name="FE_ans">the tool for get the histogram of picture</string>
    <string name="Parameters_setting_PreImg_C"><u>Class Prediction result :</u></string>
    <string name="CP_ans">display a pre-processing input image(from the selected picture)</string>
    <string name="predict_botton">PREDICT CLASS</string>
    <string name="none">-> NONE</string>
    <string name="resultt">use image to predict class</string>

    //Predict Image Class - Result page
    <string name="select_picture">Select Picture</string>
    <string name="Prediction_result">Prediction results</string>
    <string name="preprocess">Pre-processing result</string>
    <string name="Input_image">Input Image</string>
    <string name="Class_name">Class :</string>
    <string name="Feature">FEATURE EXTRCTION RESULUTS</string>
    <string name="Class_prediction_re">CLASS PREDICTION RESULT</string>
    <string name="Class_prediction">CLASS PREDICTION</string>

    //Predict Image Class - Feature Extraction Result page
    <string name="f_page">Feature Extraction</string>
    <string name="load">Load a picture</string>
    <string name="histogram">Color histogram</string>
    <string name="GrayHistogram">Gray histogram</string>
    <string name="brisk">BRISK</string>
    <string name="orb">ORB</string>
    <string name="show">SHOW</string>

    //Predict Image Class - Display feature Extraction
    <string name="Display">DISPLAY</string>
    <string name="rgb">RGB</string>
    <string name="gray">GRAY</string>
    <string name="Image_Threshold">Image Thresholding\n(Binary)</string>
    <string name="noise">Noise Removal</string>
    <string name="Contour">Contour Extraction</string>

    //Predict Image Class - Details

    //Predict Image Class - infoNotComplete
    <string name="error">Error!</string>
    <string name="go_back">Go Back</string>

    //rock-paper-scissors game
    <string name="title_game">Rock Paper Scissors Game</string>
    <string name="My_choice">Your choice</string>
    <string name="class_predict_game">computer :</string>
    <string name="play">Let\'s go!!</string>
    <string name="com">Computer</string>
    <string name="player">Player</string>
    <string name="player_stk">Player\'s stack : 0</string>
    <string name="computer_stk">Computer\'s stack : 0</string>

</resources>
